# weather-verify

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_pop_report.py  run_slice.py
.github/workflows/: ci.yml
scripts/: clean_future_issue.py
src/: __init__.py  schema.py
src/core/: __init__.py  align.py  metrics.py  precip.py  report.py
src/sources/: __init__.py  asos.py  kma.py  kma_auth.py  kma_probe.py  openmeteo.py  store.py
tests/: test_align.py  test_app.py  test_asos.py  test_asos_backfill.py  test_kma.py  test_kma_auth.py  test_kma_backfill.py  test_metrics.py  test_openmeteo.py  test_pop_report.py  test_precip.py  test_prob_metrics.py  test_schema.py  test_store.py
tests/fixtures/: asos_hourly_sample.json  kma_vilage_fcst_sample.json  openmeteo_forward_hourly_sample.json  openmeteo_hourly_sample.json
