[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-verify"
version = "0.1.0"
description = "KMA vs global weather forecast cross-verification (POP Brier / reliability)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James Rhee" }]
dependencies = [
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff>=0.8.0",
]
ui = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]

[project.urls]
Repository = "https://github.com/JamesRhee1/weather-verify"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "network: live API 호출이 필요한 테스트 (CI 에서 제외)",
]
addopts = "-m 'not network'"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "run_slice.py", "run_pop_report.py", "app.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
